adiciona foto de perfil

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <h1>Fransuelio Nobre</h1>
 
+  <img src="./assets/images/me.png" alt="Foto de perfil de Fransuelio Nobre" width="300px">
 
 
 </body>
