--- a/index.html
+++ b/index.html
@@ -10,9 +10,38 @@
 
 <body>
 
-  <h1>Fransuelio Nobre</h1>
+  <h1>Fransuelio <em>(Uélio)</em> Nobre</h1>
+
 
   <img src="./assets/images/me.png" alt="Foto de perfil de Fransuelio Nobre" width="300px">
+
+  <p>Olá, eu sou <strong>Fransuelio Nobre</strong>, mas pode me chamar de <strong>Uélio</strong> ;)</p>
+
+  <p><strong>Brasileiro</strong>, nascido Juazeiro do Norte, mas atualmente moro na Zona Rural de uma pequena cidade vizinha, chamada de <strong>Missão Velha</strong> <em>(Old Mission para os íntimos)</em>, localizada no estado do <strong>Ceará</strong>.</p>
+
+  <p>Há um bom tempo ando muito próximo da Área de TI, com ênfase em linguagens de programação e banco de dados. Logo, em <strong>2017</strong> conclui o Bacharelado em <strong>Sistemas de Informação</strong>.</p>
+
+  <p>Apaixonado por tecnologias (e cuzcuz, rsrsrs), livros técnicos e muito curioso, sempre estou lendo sobre algum assunto relacionado Tecnologia da Informação ou sobre coisas fora da área de TI também. Atualmente sou estudante de Desenvolvimento Web na Trybe, uma dass melhores escolas de Programação do Brasil.</p>
+
+  <h2>Habilidades</h2>
+  Alguma habilidades que adquiri ao longo dessa minha jornada:
+  <ul>
+    <li>
+      <strong>Lógica</strong><br>
+      Além de ser aplicar na programação de computadores, também aplico para resolver outras questões da vida real.
+    </li>
+    <li>
+      <strong>Criativo</strong><br>
+      Gosto de fazer coisas novas, aprender coisas novas e aplicar ao máximo em vários contextos.
+    </li>
+    <li>
+      <strong>Calmo e Paciente</strong><br>
+      Dois comportamentos que não podem faltar em uma boa conversa.
+    </li>
+  </ul>
+
+
+
 
 
 </body>
