--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <h1>Fransuelio <em>(Uélio)</em> Nobre</h1>
 
 
-  <img src="./assets/images/me.png" alt="Foto de perfil de Fransuelio Nobre" width="300px">
+  <img id="me" src="./assets/images/me.png" alt="Foto de perfil de Fransuelio Nobre" width="300px">
+
+  <h2 id="sobre">Sobre mim</h2>
 
   <p>Olá, eu sou <strong>Fransuelio Nobre</strong>, mas pode me chamar de <strong>Uélio</strong> ;)</p>
 
@@ -23,7 +25,7 @@
 
   <p>Apaixonado por tecnologias (e cuzcuz, rsrsrs), livros técnicos e muito curioso, sempre estou lendo sobre algum assunto relacionado Tecnologia da Informação ou sobre coisas fora da área de TI também. Atualmente sou estudante de Desenvolvimento Web na Trybe, uma dass melhores escolas de Programação do Brasil.</p>
 
-  <h2>Habilidades</h2>
+  <h2 id="habilidades">Habilidades</h2>
   Alguma habilidades que adquiri ao longo dessa minha jornada:
   <ul>
     <li>
@@ -39,6 +41,7 @@
       Dois comportamentos que não podem faltar em uma boa conversa.
     </li>
   </ul>
+
 
 
 
