adiciona um link interno para foto

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
   </ul>
 
 
+  <h2 id="foto">Fotos</h2>
+  <p>Clique aqui caso queira voltar para ver<a href="#me">minha foto</a>.</p>
+
+
+
+
 
 
 
