adiciona link para blog

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
   <h2 id="foto">Fotos</h2>
   <p>Clique aqui caso queira voltar para ver<a href="#me">minha foto</a>.</p>
 
-
+  <h2 id="blogs">Recomendação de Blog para leitura</h2>
+  <ul>
+    <li><a href="https://blog.betrybe.com/" target="_blank">Blog da Trybe</a></li>
+  </ul>
 
 
 
