--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
     <li><a href="https://blog.betrybe.com/" target="_blank">Blog da Trybe</a></li>
   </ul>
 
+  <h2>Indice</h2>
+  <ul>
+    <li><a href="#me">Eu</a></li>
+    <li><a href="#sobre">Sobre</a></li>
+    <li><a href="#habilidades">Habilidades</a></li>
+    <li><a href="#blogs">Blogs</a></li>
+  </ul>
+
 
 
 
